# Project-Free-Robot-Agent-World

./: .gitignore  .gitleaksignore  CLAUDE.md  CONTRIBUTING.md  MUJOCO_LOG.TXT  README.md  SECURITY.md  pyproject.toml
.github/workflows/: adversarial-verify.yml  security.yml
artifacts/: RETROSPECTIVE.html  RETROSPECTIVE.md
docs/: APPEARANCE_AUX.md  ARCHITECTURE.md  BEHAVIOR_TASK.md  FINDINGS.md  GSO_EXPERIMENT.md  HARDWARE.md  HOWTO.md  ORACLE_CEILING.md  PREDICTIVE_CODING.md  PROBE_APPEARANCE.md  RENDER_FIDELITY.md  TAXONOMY_NOTES.md
scripts/: appearance_aux_eval.py  bench_torch.py  eval_llm_transfer.py  figure_probe_difficulty.py  make_figures.py  mutation_check.py  oracle_ceiling.py  probe_appearance.py  render_fidelity_eval.py  run_coherence_experiment.py  run_datagen.sh  run_datagen_mujoco.sh  smoke_gso.py
src/pseudomarble/: __init__.py  config.py  llm_transfer.py  materials.py  probes.py  splits.py
src/pseudomarble/data/: __init__.py  collision.py  dataset.py  generate_abo.py  generate_blender.py  generate_gso.py  generate_mujoco.py  mesh_validate.py  parallel.py  samples.py
src/pseudomarble/models/: __init__.py  coherence.py  coherence_bench.py  losses.py  mlx_net.py  numpy_net.py  torch_net.py  train.py
tests/: batch_probe_stability.py  test_adversarial_properties.py  test_bench_torch.py  test_category_splits.py  test_coherence.py  test_coherence_bench.py  test_dataset.py  test_fsq_bottleneck.py  test_generate_abo.py  test_gso.py  test_llm_transfer.py  test_losses.py  test_material_sampler.py  test_materials.py  test_mesh_mjcf.py  test_model.py  test_mujoco_mjcf.py  test_mutation_killers.py  test_numpy_net.py  test_oracle_ceiling.py  test_parallel.py  test_probe_appearance.py  test_probes.py  test_region_splits.py  test_samples.py  test_splits.py  test_torch_net.py  test_train_warmup.py
